--- a/infrastructure/view/mailserver_view.xml
+++ b/infrastructure/view/mailserver_view.xml
@@ -70,6 +70,25 @@
             </field>
         </record>
 
+    <record id="action_infrastructure_mailserver_mail_servers" model="ir.actions.act_window">
+        <field name="name">Mail Servers</field>
+        <field name="res_model">infrastructure.mailserver</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="view_infrastructure_mailserver_tree"/>
+        <field name="search_view_id" ref="view_infrastructure_mailserver_filter"/>
+        <field name="domain">[]</field>
+    </record>
+
+    <menuitem
+        name="Mail Servers"
+        id="menu_mail_servers"
+        sequence="20"
+        action="action_infrastructure_mailserver_mail_servers"
+        parent="menu_miscellaneous"
+        groups="group_manager"
+        />
+
     </data>
 </openerp>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
