--- a/infrastructure/view/environment_version_view.xml
+++ b/infrastructure/view/environment_version_view.xml
@@ -1,88 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-##############################################################################
-#
-#    Infrastructure
-#    Copyright (C) 2014 Ingenieria ADHOC
-#    No email
-#
-#    This program is free software: you can redistribute it and/or modify
-#    it under the terms of the GNU Affero General Public License as
-#    published by the Free Software Foundation, either version 3 of the
-#    License, or (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful,
-#    but WITHOUT ANY WARRANTY; without even the implied warranty of
-#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-#    GNU Affero General Public License for more details.
-#
-#    You should have received a copy of the GNU Affero General Public License
-#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-##############################################################################
--->
-<!-- infrastructure.environment_version -->
-<!-- infrastructure.environment_version -->
 <!-- infrastructure.environment_version -->
 <openerp>
-    <data>
+<data>
 
-        <!-- SEARCH VIEW -->
-        <record id="view_infrastructure_environment_version_filter" model="ir.ui.view">
-            <field name="name">infrastructure.environment_version.select</field>
-            <field name="model">infrastructure.environment_version</field>
-            <field name="arch" type="xml">
-                <search string="environment_version" version="7.0">
-                    <group string="By Attribute">
-                    <field name="name" string="Name"
-                            />
-                    <field name="default_branch_id" string="Default Branch"
-                            />
-                    </group>
-                    <group string="By object">
-                    </group>
-                </search>
-            </field>
-        </record>
+    <!-- SEARCH VIEW -->
+    <record id="view_infrastructure_environment_version_filter" model="ir.ui.view">
+        <field name="name">infrastructure.environment_version.select</field>
+        <field name="model">infrastructure.environment_version</field>
+        <field name="arch" type="xml">
+            <search string="environment_version" version="7.0">
+                <group string="By Attribute">
+                    <field name="name" string="Name"/>
+                    <field name="default_branch_id" string="Default Branch"/>
+                </group>
+                <group string="By object">
+                </group>
+            </search>
+        </field>
+    </record>
 
-        <!-- FORMVIEW -->
-        <record id="view_infrastructure_environment_version_form" model="ir.ui.view">
-            <field name="name">infrastructure.environment_version.form</field>
-            <field name="model">infrastructure.environment_version</field>
-            <field name="arch" type="xml">
-                <form string="environment_version" version="7.0">
-                    <header>
-                    </header>
-                    <sheet string="environment_version">
-                     <group>
-                        <field name="name"
-                            />
-                        <field name="default_branch_id"
-                            />
-                     </group>
-                    </sheet>
+    <!-- FORMVIEW -->
+    <record id="view_infrastructure_environment_version_form" model="ir.ui.view">
+        <field name="name">infrastructure.environment_version.form</field>
+        <field name="model">infrastructure.environment_version</field>
+        <field name="arch" type="xml">
+            <form string="environment_version" version="7.0">
+                <header>
+                </header>
+                <sheet string="environment_version">
+                 <group>
+                    <field name="name"/>
+                    <field name="default_branch_id"/>
+                 </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
 
-                </form>
-            </field>
-        </record>
+    <!-- TREEVIEW -->
+    <record id="view_infrastructure_environment_version_tree" model="ir.ui.view">
+        <field name="name">infrastructure.environment_version.tree</field>
+        <field name="model">infrastructure.environment_version</field>
+        <field name="arch" type="xml">
+            <tree string="environment_version">
+                <field name="name"/>
+                <field name="default_branch_id"/>
+            </tree>
+        </field>
+    </record>
 
-        <!-- TREEVIEW -->
+    <record id="action_infrastructure_environment_version_environment_versions" model="ir.actions.act_window">
+        <field name="name">Environment Versions</field>
+        <field name="res_model">infrastructure.environment_version</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="view_infrastructure_environment_version_tree"/>
+        <field name="search_view_id" ref="view_infrastructure_environment_version_filter"/>
+        <field name="domain">[]</field>
+    </record>
 
-        <record id="view_infrastructure_environment_version_tree" model="ir.ui.view">
-            <field name="name">infrastructure.environment_version.tree</field>
-            <field name="model">infrastructure.environment_version</field>
-            <field name="arch" type="xml">
-                <tree string="environment_version"
-                    >
-                    <field name="name"
-                        />
-                    <field name="default_branch_id"
-                        />
-                </tree>
-            </field>
-        </record>
+    <menuitem
+        name="Environment Versions"
+        id="menu_environment_versions"
+        sequence="20"
+        action="action_infrastructure_environment_version_environment_versions"
+        parent="menu_serv__env_and_inst"
+        groups="group_manager"
+        />
 
-    </data>
+</data>
 </openerp>
-<!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
-     -->
