--- a/infrastructure/view/repository_branch_view.xml
+++ b/infrastructure/view/repository_branch_view.xml
@@ -76,6 +76,25 @@
             </field>
         </record>
 
+    <record id="action_infrastructure_repository_branch_branches" model="ir.actions.act_window">
+        <field name="name">Branches</field>
+        <field name="res_model">infrastructure.repository_branch</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="view_infrastructure_repository_branch_tree"/>
+        <field name="search_view_id" ref="view_infrastructure_repository_branch_filter"/>
+        <field name="domain">[]</field>
+    </record>
+
+    <menuitem
+        name="Branches"
+        id="menu_branches"
+        sequence="100"
+        action="action_infrastructure_repository_branch_branches"
+        parent="menu_repositories_conf"
+        groups="group_manager"
+        />
+
     </data>
 </openerp>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
