--- a/infrastructure/view/repository_view.xml
+++ b/infrastructure/view/repository_view.xml
@@ -113,6 +113,25 @@
             </field>
         </record>
 
+    <record id="action_infrastructure_repository_respositories" model="ir.actions.act_window">
+        <field name="name">Respositories</field>
+        <field name="res_model">infrastructure.repository</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="view_infrastructure_repository_tree"/>
+        <field name="search_view_id" ref="view_infrastructure_repository_filter"/>
+        <field name="domain">[]</field>
+    </record>
+
+    <menuitem
+        name="Respositories"
+        id="menu_respositories"
+        sequence="100"
+        action="action_infrastructure_repository_respositories"
+        parent="menu_repositories_conf"
+        groups="group_manager"
+        />
+
     </data>
 </openerp>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
