--- a/infrastructure/view/service_view.xml
+++ b/infrastructure/view/service_view.xml
@@ -78,6 +78,25 @@
             </field>
         </record>
 
+    <record id="action_infrastructure_service_services" model="ir.actions.act_window">
+        <field name="name">Services</field>
+        <field name="res_model">infrastructure.service</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">tree,form</field>
+        <field name="view_id" ref="view_infrastructure_service_tree"/>
+        <field name="search_view_id" ref="view_infrastructure_service_filter"/>
+        <field name="domain">[]</field>
+    </record>
+
+    <menuitem
+        name="Services"
+        id="menu_services"
+        sequence="100"
+        action="action_infrastructure_service_services"
+        parent="menu_miscellaneous"
+        groups="group_manager"
+        />
+
     </data>
 </openerp>
 <!-- vim:expandtab:smartindent:tabstop=4:softtabstop=4:shiftwidth=4
